# openapi.yaml
@@ -3,32 +3,30 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: SolidService API
     version: 0.0.1
 paths:
-    /helloworld/{name}:
-        get:
-            tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
     /v1/solid:
         get:
             tags:
                 - SolidService
+            description: |-
+                rpc UpdateSolid (UpdateSolidRequest) returns (UpdateSolidReply) {
+                 	option (google.api.http) = {
+                 		put: "/v1/solid/{id}"
+                 		body: "*"
+                 	};
+                 };
+                 rpc DeleteSolid (DeleteSolidRequest) returns (DeleteSolidReply) {
+                 	option (google.api.http) = {
+                 		delete: "/v1/solid/{id}"
+                 	};
+                 };
+                 rpc GetSolid (GetSolidRequest) returns (GetSolidReply) {
+                 	option (google.api.http) = {
+                 		get: "/v1/solid/{id}"
+                 	};
+                 };
             operationId: SolidService_ListSolid
             responses:
                 "200":
@@ -54,67 +52,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.solid.v1.CreateSolidReply'
-    /v1/solid/{id}:
-        get:
-            tags:
-                - SolidService
-            operationId: SolidService_GetSolid
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int64
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.solid.v1.GetSolidReply'
-        put:
-            tags:
-                - SolidService
-            operationId: SolidService_UpdateSolid
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int64
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.solid.v1.UpdateSolidRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.solid.v1.UpdateSolidReply'
-        delete:
-            tags:
-                - SolidService
-            operationId: SolidService_DeleteSolid
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int64
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.solid.v1.DeleteSolidReply'
 components:
     schemas:
         api.solid.v1.CreateSolidReply:
@@ -129,14 +66,6 @@ components:
                     type: string
                 date:
                     type: string
-        api.solid.v1.DeleteSolidReply:
-            type: object
-            properties: {}
-        api.solid.v1.GetSolidReply:
-            type: object
-            properties:
-                solid:
-                    $ref: '#/components/schemas/api.solid.v1.Solid'
         api.solid.v1.ListSolidReply:
             type: object
             properties:
@@ -154,26 +83,5 @@ components:
                     type: string
                 date:
                     type: string
-        api.solid.v1.UpdateSolidReply:
-            type: object
-            properties: {}
-        api.solid.v1.UpdateSolidRequest:
-            type: object
-            properties:
-                id:
-                    type: integer
-                    format: int64
-                wechatName:
-                    type: string
-                date:
-                    type: string
-        helloworld.v1.HelloReply:
-            type: object
-            properties:
-                message:
-                    type: string
-            description: The response message containing the greetings
 tags:
-    - name: Greeter
-      description: The greeting service definition.
     - name: SolidService
